crates/zuban_python/tests/mypylike/tests/django.test
[case django_models_nullable]
from django.db import models
class Foo(models.Model):
    not_nullable = models.CharField()
    nullable = models.CharField(null=True)

def f(x: Foo):
    reveal_type(x.not_nullable)  # N: Revealed type is "str"
    reveal_type(x.nullable)  # N: Revealed type is "str | None"
    reveal_type(x.pk)  # N: Revealed type is "Any"

    x.not_nullable = 1
    x.nullable = 1

    x.not_nullable = '2'
    x.nullable = '2'

    x.not_nullable = b'3'  # E: Incompatible types in assignment (expression has type "bytes", variable has type "str | int | Combinable")
    x.nullable = b'3'  # E: Incompatible types in assignment (expression has type "bytes", variable has type "str | int | Combinable | None")

    x.not_nullable = None  # E: Incompatible types in assignment (expression has type "None", variable has type "str | int | Combinable")
    x.nullable = None

[case django_id_attributes]
# From GH #332
from django.db import models
class Musician(models.Model):
    name = models.CharField(max_length=100)

class Composer(models.Model):
    name = models.CharField(max_length=100)

class Album(models.Model):
    artist = models.ForeignKey(Musician, on_delete=models.CASCADE, null=True)
    composer = models.ForeignKey(Composer, on_delete=models.CASCADE)
    name = models.CharField(max_length=100)

def f(album: Album):
    reveal_type(album.artist.pk) if album.artist else None  # N: Revealed type is "Any"
    reveal_type(album.artist_id)  # N: Revealed type is "Any"
    reveal_type(album.composer_id)  # N: Revealed type is "Any"
    reveal_type(album.composer.pk)  # N: Revealed type is "Any"
    reveal_type(album.artist.id) if album.artist else None  # N: Revealed type is "Any"
    reveal_type(album.composer.id)  # N: Revealed type is "Any"

    album.name_id  # E: "Album" has no attribute "name_id"

    #? complete
    album.artist
    #? complete
    album.composer
    #? complete
    album.name

[out]
__main__.py:25:complete -> [artist, artist_id]
__main__.py:27:complete -> [composer, composer_id]
__main__.py:29:complete -> [name]

[case django_related_name]
from django.db import models

class Author(models.Model):
    name = models.CharField(max_length=100)

class Book(models.Model):
    author = models.ForeignKey(Author, on_delete=models.CASCADE, related_name='books')

class Magazine(models.Model):
    editor = models.ForeignKey(Author, on_delete=models.CASCADE, related_name='edited_magazines')

class Newspaper(models.Model):
    editor = models.ForeignKey(Author, on_delete=models.CASCADE, related_name='+')
 
class WikipediaArticle(models.Model):
    authors = models.ManyToManyField(Author, through="WikipediaArticleAuthors", related_name="wikipedia_articles")  # E: Need type annotation for "authors"

class WikipediaArticleAuthors(models.Model):
    article = models.ForeignKey(WikipediaArticle, on_delete=models.CASCADE)
    author = models.ForeignKey(Author, on_delete=models.CASCADE)

def f(author: Author):
    reveal_type(author.books)  # N: Revealed type is "django.db.models.fields.related_descriptors.RelatedManager[__main__.Book]"
    reveal_type(author.book_set)  # N: Revealed type is "django.db.models.fields.related_descriptors.RelatedManager[__main__.Book]"
    reveal_type(author.edited_magazines)  # N: Revealed type is "django.db.models.fields.related_descriptors.RelatedManager[__main__.Magazine]"
    reveal_type(author.wikipedia_articles)  # N: Revealed type is "django.db.models.fields.related_descriptors.RelatedManager[__main__.WikipediaArticle]"
    author.nonexistent_related  # E: "Author" has no attribute "nonexistent_related"
    author.newspaper_set  # E: "Author" has no attribute "newspaper_set"


    #? complete
    author.books
    #? complete
    author.edited_magazines

[out]
__main__.py:32:complete -> [books]
__main__.py:34:complete -> [edited_magazines]
